--- a/examples/explore_model.convnextv2_atto+bifpn+head.ipynb
+++ b/examples/explore_model.convnextv2_atto+bifpn+head.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,10 +37,11 @@
     "\n",
     "        model = timm.create_model('convnextv2_atto.fcmae', pretrained=pretrained)\n",
     "\n",
-    "        num_channels = 1\n",
+    "        in_channels = 1\n",
+    "        out_channels = model.stem[0].out_channels\n",
     "\n",
-    "        ave_weight_patch_embd = model.stem[0].weight.data.mean(dim = num_channels, keepdim = True) # [40, 3, 4, 4] -> [40, 1, 4, 4]\n",
-    "        model.stem[0] = nn.Conv2d(num_channels, 40, kernel_size=(4, 4), stride=(4, 4))\n",
+    "        ave_weight_patch_embd = model.stem[0].weight.data.mean(dim = in_channels, keepdim = True) # [40, 3, 4, 4] -> [40, 1, 4, 4]\n",
+    "        model.stem[0] = nn.Conv2d(in_channels, out_channels, kernel_size=(4, 4), stride=(4, 4))\n",
     "        model.stem[0].weight.data = ave_weight_patch_embd\n",
     "        \n",
     "        self.stem  = model.stem\n",
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,18 +83,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from bifpn.bifpn        import BiFPN\n",
     "from bifpn.bifpn_config import BiFPNConfig\n",
-    "from bifpn.utils_build  import BackboneToBiFPNAdapter"
+    "from bifpn.utils_build  import BackboneToBiFPNAdapter, BackboneToBiFPNAdapterConfig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,12 +179,14 @@
     "        \"layer3\" : 160,\n",
     "        \"layer4\" : 320,\n",
     "}\n",
-    "backbone_to_bifpn = BackboneToBiFPNAdapter(num_bifpn_features, backbone_output_channels)"
+    "\n",
+    "config = BackboneToBiFPNAdapterConfig(num_bifpn_features = num_bifpn_features, backbone_output_channels = backbone_output_channels)\n",
+    "backbone_to_bifpn = BackboneToBiFPNAdapter(config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +234,7 @@
        "BiFPNConfig(RELU_INPLACE=False, DOWN_SCALE_FACTOR=0.5, UP_SCALE_FACTOR=2, NUM_BLOCKS=1, NUM_FEATURES=256, NUM_LEVELS=4, BASE_LEVEL=2, BN=BNConfig(EPS=1e-05, MOMENTUM=0.1), FUSION=FusionConfig(EPS=1e-05))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -270,6 +273,194 @@
    "source": [
     "for i in range(len(bifpn_output_list)):\n",
     "    print(bifpn_output_list[i].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass, field, asdict, is_dataclass\n",
+    "from typing import List\n",
+    "\n",
+    "class SegLateralLayer(nn.Module):\n",
+    "\n",
+    "    def __init__(self, in_channels, out_channels, num_groups, num_layers, base_scale_factor = 2):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.enables_upsample = num_layers > 0\n",
+    "\n",
+    "        # Strange strategy, but...\n",
+    "        num_layers = max(num_layers, 1)\n",
+    "\n",
+    "        # 3x3 convolution with pad 1, group norm and relu...\n",
+    "        self.layers = nn.ModuleList([\n",
+    "            nn.Sequential(\n",
+    "                nn.Conv2d(in_channels  = (in_channels if idx == 0 else out_channels),\n",
+    "                          out_channels = out_channels,\n",
+    "                          kernel_size  = 3,\n",
+    "                          padding      = 1,),\n",
+    "                nn.GroupNorm(num_groups, out_channels),\n",
+    "                nn.ReLU(),\n",
+    "            )\n",
+    "            for idx in range(num_layers)\n",
+    "        ])\n",
+    "\n",
+    "        self.base_scale_factor = base_scale_factor\n",
+    "\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        for layer in self.layers:\n",
+    "            # Conv3x3...\n",
+    "            x = layer(x)\n",
+    "\n",
+    "            # Optional upsampling...\n",
+    "            if self.enables_upsample:\n",
+    "                x = F.interpolate(x,\n",
+    "                                  scale_factor  = self.base_scale_factor,\n",
+    "                                  mode          = 'bilinear',\n",
+    "                                  align_corners = False)\n",
+    "\n",
+    "        return x\n",
+    "\n",
+    "\n",
+    "@dataclass\n",
+    "class SegHeadConfig:\n",
+    "    UP_SCALE_FACTOR: List[int] = field(\n",
+    "        default_factory = lambda : [\n",
+    "            ## 2,  # stem\n",
+    "            4,  # layer1\n",
+    "            8,  # layer2\n",
+    "            16, # layer3\n",
+    "            32, # layer4\n",
+    "        ]\n",
+    "    )\n",
+    "    NUM_GROUPS           : int  = 32\n",
+    "    OUT_CHANNELS         : int  = 256\n",
+    "    NUM_CLASSES          : int  = 3\n",
+    "    BASE_SCALE_FACTOR    : int  = 2\n",
+    "    USES_LEARNED_UPSAMPLE: bool = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import log\n",
+    "\n",
+    "seghead_config = SegHeadConfig()\n",
+    "\n",
+    "# Create the prediction head...\n",
+    "base_scale_factor         = seghead_config.BASE_SCALE_FACTOR\n",
+    "max_scale_factor          = seghead_config.UP_SCALE_FACTOR[0]\n",
+    "num_upscale_layer_list    = [ int(log(i/max_scale_factor)/log(2)) for i in seghead_config.UP_SCALE_FACTOR ]\n",
+    "lateral_layer_in_channels = BiFPNConfig.NUM_FEATURES\n",
+    "seg_lateral_layers = nn.ModuleList([\n",
+    "    # Might need to reverse the order (pay attention to the order in the bifpn output)\n",
+    "    SegLateralLayer(in_channels       = lateral_layer_in_channels,\n",
+    "                    out_channels      = seghead_config.OUT_CHANNELS,\n",
+    "                    num_groups        = seghead_config.NUM_GROUPS,\n",
+    "                    num_layers        = num_upscale_layers,\n",
+    "                    base_scale_factor = base_scale_factor)\n",
+    "    for num_upscale_layers in num_upscale_layer_list\n",
+    "])\n",
+    "\n",
+    "head_segmask  = nn.Conv2d(in_channels  = seghead_config.OUT_CHANNELS,\n",
+    "                                out_channels = seghead_config.NUM_CLASSES,\n",
+    "                                kernel_size  = 1,\n",
+    "                                padding      = 0,)\n",
+    "\n",
+    "if seghead_config.USES_LEARNED_UPSAMPLE:\n",
+    "    head_upsample_layer = nn.ConvTranspose2d(in_channels  = seghead_config.NUM_CLASSES,\n",
+    "                                                    out_channels = seghead_config.NUM_CLASSES,\n",
+    "                                                    kernel_size  = 6,\n",
+    "                                                    stride       = 4,\n",
+    "                                                    padding      = 1,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fuse feature maps at each resolution (from low res to high res)...\n",
+    "for idx, (lateral_layer, bifpn_output) in enumerate(zip(seg_lateral_layers[::-1], bifpn_output_list[::-1])):\n",
+    "    fmap = lateral_layer(bifpn_output)\n",
+    "\n",
+    "    if idx == 0:\n",
+    "        fmap_acc  = fmap\n",
+    "    else:\n",
+    "        fmap_acc += fmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([10, 256, 256, 256])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fmap_acc.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make prediction...\n",
+    "pred_map = head_segmask(fmap_acc)\n",
+    "\n",
+    "# Upscale...\n",
+    "max_scale_factor = seghead_config.UP_SCALE_FACTOR[0]\n",
+    "pred_map = F.interpolate(pred_map,\n",
+    "                            scale_factor  = max_scale_factor,\n",
+    "                            mode          = 'bilinear',\n",
+    "                            align_corners = False)                   \\\n",
+    "            if not seghead_config.USES_LEARNED_UPSAMPLE else \\\n",
+    "            head_upsample_layer(pred_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([10, 3, 1024, 1024])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred_map.shape"
    ]
   }
  ],
